		- Added virtual domain support. (The setup program is not properly working yet)
		- Fixed a few problems with the categories class
		- Fixed nextmatchs calling link() wrong causing the next pages to not be displayed.
		- Removed javascript from the login template
		- Fixed HTML error in the application status select box for admin -> new/edit application

[0.9.3] - Fixed the new user account form not returning the users firstname or last name when an
	      error is reported.
		- Fixed NNTP to handle new VFS api.
		- Fixed a number of preferences bugs on the main screen.
		- Fixed E-Mail sigs not being added.
		- Moved E-Mail preferences into its own section.
		- When changing NNTP servers, now deletes newsgroups and users_newsgroups.
		- Applied Patch #102089 - scrollbars for addressbook when composing email.  Thanks jaggdedge <jaggdedge@users.sourceforge.net>
		- owner fields are now working off account_id instead of account_lid
		- Fixed time format on calendar preferences.
		- NNTP now uses preferences to store monitored newsgroups.
		- Added better error checking in applications admin section.
		- Applied Patch #102116 - qmail/vmail spaces in TO:,CC: fields sending email.  Thanks jaggdedge <jaggdedge@users.sourceforge.net>
		- Email Trash folder is now created if it doesn't exsist
		- Added user preferences for sending messages to the trash or just deleteing them.
		- Started working on LDAP support.  Its some what functional right now, but please be carefull
		  it has not been fully tested or debugged.
		- Fixed appsession() not decrypting data properly.
		- mcrypt should be working correctly now.
		- Fixed problem with email's addressbook not retrieving records.
		- Applied patch for accounts->listusers().  Thanks Mathieu van Loon <mathieu@playcollevtive.com>
		- Fixed check for new version not working.
		- Merged in patch for vcard support in addressbook. Thanks Qbert <qbert@users.sourceforge.net>