@@ -17,6 +17,7 @@
 		- Fixed nextmatchs calling link() wrong causing the next pages to not be displayed.
 		- Removed javascript from the login template
 		- Fixed HTML error in the application status select box for admin -> new/edit application
+		- Fixed group public filters in addressbook and todo list
 
 [0.9.3] - Fixed the new user account form not returning the users firstname or last name when an
 	      error is reported.
